--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An Electron application with React and TypeScript",
   "type": "module",
   "main": "./out/main/index.js",
-  "author": "example.com",
+  "author": "mamikeji.com",
   "homepage": "https://electron-vite.org",
   "scripts": {
     "format": "prettier --write .",
